--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="ginger - 프로필 링크">
+    <meta property="og:title" content="ginger - Profile Link">
     <meta property="og:description" content="Front-end Developer 지망생">
     <meta property="og:image" content="gg.jpg">
-    <title>르탄이 - 프로필 링크</title>
+    <title>ginger - Profile Link</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
